--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -19,116 +19,120 @@
 
     <div class="container-fluid" style="height: 100%;">
 
-        <%- include('../partials/flashMessages') %>
 
 
 
 
-            <div class="row mb-4">
-                <div class="col-md-12 text-center">
-                    <%- language.main.intro %>
-                </div>
+        <div class="row mb-4">
+            <div class="col-md-12 text-center">
+                <%- language.main.intro %>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <%- include('../partials/flashMessages') %>
+            </div>
+        </div>
 
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <div class="card cardHome">
-                        <div class="card-header">
-                            <strong>What?</strong>
-                        </div>
-                        <div class="card-body text-center">
-                            Piattaforma finalizzata al relax, alla motivazione e al conforto.<br>Ognuno può salvare quello che gli piace nella raccolta dedicata <a class="font-italic" href="/saved">preferiti</a>
-                        </div>
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <div class="card cardHome">
+                    <div class="card-header">
+                        <strong>What?</strong>
                     </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <div class="card cardHome">
-                        <div class="card-header">
-                            <strong>Why?</strong>
-                        </div>
-                        <div class="card-body text-center">
-                            Nata a seguito di un processo di introspezione maturato negli ultimi mesi
-                        </div>
+                    <div class="card-body text-center">
+                        Piattaforma finalizzata al relax, alla motivazione e al conforto.<br>Ognuno può salvare quello che gli piace nella raccolta dedicata <a class="font-italic" href="/saved">preferiti</a>
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="card cardHome">
-
-                        <% if (user) { %>
-                            <div class="card-header">
-                                <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Hai già effettuato l'accesso</strong>
-                            </div>
-                            <div class="card-body">
-                                Buon divertimento! <i class="far fa-heart text-primary"></i>
-                            </div>
-                            <% } else { %>
-                                <div class="card-header">
-                                    <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Inizia da qui</strong>
-                                </div>
-                                <div class="card-body">
-                                    Da <a href="/register">qui</a> puoi procedere creando il tuo personale account
-                                </div>
-                                <% } %>
-
+            <div class="col-md-6 mb-4">
+                <div class="card cardHome">
+                    <div class="card-header">
+                        <strong>Why?</strong>
+                    </div>
+                    <div class="card-body text-center">
+                        Nata a seguito di un processo di introspezione maturato negli ultimi mesi
                     </div>
                 </div>
             </div>
+        </div>
 
-            <hr>
+        <div class="row">
+            <div class="col-12">
+                <div class="card cardHome">
 
-            <div class="row">
-                <div class="col-12">
-                    <div class="card cardHome">
+                    <% if (user) { %>
                         <div class="card-header">
-                            Pubblicazioni recenti
+                            <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Hai già effettuato l'accesso</strong>
                         </div>
                         <div class="card-body">
+                            Buon divertimento! <i class="far fa-heart text-primary"></i>
+                        </div>
+                        <% } else { %>
+                            <div class="card-header">
+                                <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Inizia da qui</strong>
+                            </div>
+                            <div class="card-body">
+                                Da <a href="/register">qui</a> puoi procedere creando il tuo personale account
+                            </div>
+                            <% } %>
 
-                            <div class="row">
+                </div>
+            </div>
+        </div>
 
-                                <div class="col-sm-12 col-md-4 mb-4">
-                                    <div class="card cardHome">
-                                        <div class="card-header">
-                                            Titolo
-                                        </div>
-                                        <div class="card-body">
-                                            Contenuto
-                                        </div>
+        <hr>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="card cardHome">
+                    <div class="card-header">
+                        Pubblicazioni recenti
+                    </div>
+                    <div class="card-body">
+
+                        <div class="row">
+
+                            <div class="col-sm-12 col-md-4 mb-4">
+                                <div class="card cardHome">
+                                    <div class="card-header">
+                                        Titolo
                                     </div>
-                                </div>
-
-                                <div class="col-sm-12 col-md-4">
-                                    <div class="card cardHome">
-                                        <div class="card-header">
-                                            Titolo
-                                        </div>
-                                        <div class="card-body">
-                                            Contenuto
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-12 col-md-4">
-                                    <div class="card cardHome">
-                                        <div class="card-header">
-                                            Titolo
-                                        </div>
-                                        <div class="card-body">
-                                            Contenuto
-                                        </div>
+                                    <div class="card-body">
+                                        Contenuto
                                     </div>
                                 </div>
                             </div>
 
+                            <div class="col-sm-12 col-md-4">
+                                <div class="card cardHome">
+                                    <div class="card-header">
+                                        Titolo
+                                    </div>
+                                    <div class="card-body">
+                                        Contenuto
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-4">
+                                <div class="card cardHome">
+                                    <div class="card-header">
+                                        Titolo
+                                    </div>
+                                    <div class="card-body">
+                                        Contenuto
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
+        </div>
+        <br>
+        <br>
 
     </div>
 
