--- a/views/admin/people/update.ejs
+++ b/views/admin/people/update.ejs
@@ -10,11 +10,12 @@
 
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold">Modifica PERSONA</h6>
+                    <span id="status"></span>
                 </div>
 
                 <div class="card-body">
 
-                    <form action="/admin/people/<%= person.id %>" method="POST" enctype="multipart/form-data">
+                    <form action="/admin/people/<%= person.id %>" method="POST" enctype="multipart/form-data" id="uploadForm">
 
                         <div class="row">
                             <div class="col-md-4">
@@ -151,7 +152,8 @@
     </div>
 
     <script src="/js/dateOfBirth.js"></script>
-    <script src="/js/admin/crudPeople.js"></script>
+    <script src="/js/admin/utilsS3.js"></script>
+    <!-- <script src="/js/admin/crudPeople.js"></script> -->
 
 
     <%- include('../partials/footer') %>
