changed confirm text

--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -121,7 +121,7 @@
                 </div>
                 <div class="card-footer">
                     <div id="input-group">
-                        <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-check"></i> | Conferma modifica</button>
+                        <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-check"></i> | Conferma</button>
                         <a href="/admin/phrases">
                             <button type="button" class="btn btn-dark mb-2"><i class="fas fa-history"></i> | Annulla</button>
                         </a>
