--- a/views/admin/people/create.ejs
+++ b/views/admin/people/create.ejs
@@ -106,7 +106,7 @@
                 </div>
                 <div class="card-footer ">
                     <div id="input-group ">
-                        <button type="submit " class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma creazione</button>
+                        <button type="submit " class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma</button>
                         <a href="/admin/people ">
                             <button type="button " class="btn btn-dark mb-2 "><i class="fas fa-history "></i> | Annulla</button>
                         </a>
