--- a/views/admin/people/update.ejs
+++ b/views/admin/people/update.ejs
@@ -131,7 +131,7 @@
                 <div class="card-footer ">
                     <div class="col-12 d-flex justify-content-between align-items-center">
                         <div id="input-group">
-                            <button type="submit" class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma modifica</button>
+                            <button type="submit" class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma</button>
                             <a href="/admin/people">
                                 <button type="button" class="btn btn-dark mb-2 "><i class="fas fa-history "></i> | Annulla</button>
                             </a>
