crud users checked

--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -41,18 +41,18 @@ body {
 
 .cardHome>.card-body {
     /* background-color: #D4D3D3; */
-    background-color: rgba(212, 211, 211, .4);
+    /* background-color: rgba(212, 211, 211, .4); */
     text-align: center;
 }
 
 .cardHome>.card-header,
 .cardHome>.card-footer {
-    background-color: rgba(226, 226, 226, .2);
-    /* background-color: rgba(255, 0, 0, .2) */
+    background-color: rgba(224, 224, 224, .1)
 }
 
 .cardHome .card-footer {
     text-align: right;
+    border: none;
 }
 
 .myImg {
