--- a/views/admin/partials/form/userRoles.ejs
+++ b/views/admin/partials/form/userRoles.ejs
@@ -1,4 +1,4 @@
-<select class="selectpicker show-tick" name="role" id="role">
+<select class="selectpicker show-tick mt-4" name="role" id="role">
 
     <% if (userToUpdate.role) { %>
         <% if (userToUpdate.role === roles.admin) { %>
