--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -69,7 +69,7 @@
                                                 </a>
                                             </td>
                                             <td style="width: 25%;">
-                                                <a class="text-info">
+                                                <a href="/admin/users/<%= phrase.authorId %>" class="text-info">
                                                     <%= phrase.username %>
                                                 </a>
                                             </td>
