--- a/views/admin/posts/all.ejs
+++ b/views/admin/posts/all.ejs
@@ -76,7 +76,7 @@
                                                     </a>
                                                 </td>
                                                 <td>
-                                                    <a class="text-info">
+                                                    <a href="/admin/users/<%= post.authorId %>" class="text-info">
                                                         <%= post.username %>
                                                     </a>
                                                 </td>
