--- a/views/admin/users/all.ejs
+++ b/views/admin/users/all.ejs
@@ -3,6 +3,13 @@
 
 
     <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-12 text-center">
+                <%- include('../../partials/flashMessages') %>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-12 mb-4">
                 <div class="card border-right-primary shadow h-100 py-2">
