--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -36,8 +36,8 @@
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <div class="card cardHome">
-                    <div class="card-header">
+                <div class="card border-primary bg-transparent cardHome">
+                    <div class="card-header border-primary">
                         <strong>What?</strong>
                     </div>
                     <div class="card-body text-center">
@@ -46,11 +46,11 @@
                 </div>
             </div>
             <div class="col-md-6 mb-4">
-                <div class="card cardHome">
-                    <div class="card-header">
+                <div class="card cardHome border-primary bg-transparent">
+                    <div class="card-header border-primary">
                         <strong>Why?</strong>
                     </div>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center bg-transparent">
                         Nata a seguito di un processo di introspezione maturato negli ultimi mesi
                     </div>
                 </div>
@@ -59,18 +59,18 @@
 
         <div class="row">
             <div class="col-12">
-                <div class="card cardHome">
+                <div class="card cardHome border-primary bg-transparent">
 
                     <% if (user) { %>
-                        <div class="card-header">
-                            <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Hai già effettuato l'accesso</strong>
+                        <div class="card-header border-primary">
+                            <i class="fas fa-space-shuttle text-info"></i>&nbsp;<strong>Hai già effettuato l'accesso</strong>
                         </div>
                         <div class="card-body">
                             Buon divertimento! <i class="far fa-heart text-primary"></i>
                         </div>
                         <% } else { %>
-                            <div class="card-header">
-                                <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Inizia da qui</strong>
+                            <div class="card-header border-primary">
+                                <i class="fas fa-space-shuttle text-info"></i>&nbsp;<strong>Inizia da qui</strong>
                             </div>
                             <div class="card-body">
                                 Da <a href="/register">qui</a> puoi procedere creando il tuo personale account
@@ -85,8 +85,8 @@
 
         <div class="row">
             <div class="col-12">
-                <div class="card cardHome">
-                    <div class="card-header">
+                <div class="card cardHome border-primary bg-transparent">
+                    <div class="card-header border-primary">
                         Pubblicazioni recenti
                     </div>
                     <div class="card-body">
@@ -94,8 +94,8 @@
                         <div class="row">
 
                             <div class="col-sm-12 col-md-4 mb-4">
-                                <div class="card cardHome">
-                                    <div class="card-header">
+                                <div class="card cardHome border-primary bg-transparent">
+                                    <div class="card-header border-primary">
                                         Titolo
                                     </div>
                                     <div class="card-body">
@@ -105,8 +105,8 @@
                             </div>
 
                             <div class="col-sm-12 col-md-4">
-                                <div class="card cardHome">
-                                    <div class="card-header">
+                                <div class="card cardHome border-primary bg-transparent">
+                                    <div class="card-header border-primary">
                                         Titolo
                                     </div>
                                     <div class="card-body">
@@ -116,8 +116,8 @@
                             </div>
 
                             <div class="col-sm-12 col-md-4">
-                                <div class="card cardHome">
-                                    <div class="card-header">
+                                <div class="card cardHome border-primary bg-transparent">
+                                    <div class="card-header border-primary">
                                         Titolo
                                     </div>
                                     <div class="card-body">
