--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -21,7 +21,7 @@
 
 
 
-                    <form action="/admin/profile/<%= user.id %>" method="POST" enctype="multipart/form-data" id="form">
+                    <form action="/admin/profile/<%= user.id %>" method="POST" enctype="multipart/form-data" id="uploadForm">
 
                         <div class="row">
                             <div class="col-md-6">
