--- a/views/admin/users/createModify.ejs
+++ b/views/admin/users/createModify.ejs
@@ -16,68 +16,127 @@
 
                 <div class="card-body">
 
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <%- include('../../partials/flashMessages') %>
+                        </div>
+                    </div>
+
 
                     <form action="/admin/users/<%= formAction %>" method="POST" enctype="multipart/form-data">
 
                         <div class="row">
 
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="email">Email <%- include('../partials/form/requiredSymbol') %></label>
                                     <input type="email" name="email" id="email" class="form-control" required value="<%= userToUpdate.email %>">
                                 </div>
                             </div>
 
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="username">Username <%- include('../partials/form/requiredSymbol') %></label>
                                     <input type="text" name="username" id="username" class="form-control" required value="<%= userToUpdate.username %>">
                                 </div>
                             </div>
 
-                            <div class=" col-md-4 ">
-                                <div class="form-group ">
-                                    <label for="password ">Password <%- include('../partials/form/requiredSymbol') %></label>
+                        </div>
+
+
+
+                        <hr>
+
+
+                        <% if (userToUpdate.password) { %>
+                            <div class="row">
+                                <div class="col-12 mb-2">
+                                    Vuoi cambiare la <span class="font-italic text-primary">password</span> ?
+                                </div>
+                            </div>
+                            <% } %>
+
+                                <div class="row">
+
+                                    <!-- <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="password">Password <%- include('../partials/form/requiredSymbol') %></label>
                                     <% if (!userToUpdate.password) { %>
                                         <input type="password" name="password" id="password" class="form-control" required>
                                         <% } else { %>
                                             <input type="password" name="password" id="password" class="form-control" required disabled>
                                             <% } %>
                                 </div>
-                            </div>
-                        </div>
+                            </div> -->
 
-                        <div class="row ">
-                            <div class="col-md-4 ">
-                                <div class="form-group">
-                                    <label for="name ">Nome</label>
-                                    <input type="text" name="name" id="name" class="form-control" value="<%= userToUpdate.name %>">
-                                </div>
-
-                            </div>
-                            <div class="col-md-4 ">
-                                <div class="form-group ">
-                                    <label for="surname ">Cognome</label>
-                                    <input type="text " name="surname" id="surname" class="form-control " value="<%= userToUpdate.surname %>">
-                                </div>
-                            </div>
-                            <div class="col-md-4 ">
-                                <div class="form-group ">
-                                    <label for="dateOfBirth ">Data di nascita</label>
-                                    <input type="date" name="dateOfBirth" id="dateOfBirth" class="form-control " value="<%= userToUpdate.yearOfBirth %>-<%= userToUpdate.monthOfBirth %>-<%= userToUpdate.dayOfBirth %>">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row ">
-                            <div class="col-12 ">
-                                <div class="input-group mb-3">
-
-                                    <div class="input-group-prepend">
-                                        <label class="input-group-text" for="country">Paese</label>
+                                    <div class="input-group col-md-6 mb-4">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text bg-white px-2">
+                                            <i class="fas fa-key"></i>
+                                        </span>
+                                        </div>
+                                        <% if (!userToUpdate.password) { %>
+                                            <input type="password" id="password" name="password" placeholder="Inserire la nuova password" class="form-control" required>
+                                            <% } else { %>
+                                                <input type="password" id="password" name="password" placeholder="Inserire la nuova password" class="form-control">
+                                                <% } %>
                                     </div>
-                                    <!-- data-live-search-normalize : accent-insensitive searching -->
-                                    <select class="selectpicker show-tick" name="countryCode" id="countryCode" data-live-search="true" data-live-search-normalize="true" data-size="6">  
+
+
+                                    <div class="input-group col-md-6 mb-4">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text bg-white px-2">
+                                            <i class="fas fa-key"></i>
+                                        </span>
+                                        </div>
+                                        <% if (!userToUpdate.password) { %>
+                                            <input type="password" id="passwordConfirm" name="passwordConfirm" placeholder="Confermare la nuova password" class="form-control" required>
+                                            <% } else { %>
+                                                <input type="password" id="passwordConfirm" name="passwordConfirm" placeholder="Confermare la nuova password" class="form-control">
+                                                <% } %>
+                                    </div>
+
+
+
+
+                                    <%- include('../partials/form/passwordRequirements') %>
+
+                                </div>
+
+                                <hr>
+
+
+                                <div class="row">
+                                    <div class="col-md-4 ">
+                                        <div class="form-group">
+                                            <label for="name">Nome</label>
+                                            <input type="text" name="name" id="name" class="form-control" value="<%= userToUpdate.name %>">
+                                        </div>
+
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label for="surname">Cognome</label>
+                                            <input type="text" name="surname" id="surname" class="form-control" value="<%= userToUpdate.surname %>">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label for="dateOfBirth">Data di nascita</label>
+                                            <input type="date" name="dateOfBirth" id="dateOfBirth" class="form-control" value="<%= userToUpdate.yearOfBirth %>-<%= userToUpdate.monthOfBirth %>-<%= userToUpdate.dayOfBirth %>">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="input-group mb-3">
+
+                                            <div class="input-group-prepend">
+                                                <label class="input-group-text" for="country">Paese</label>
+                                            </div>
+                                            <!-- data-live-search-normalize : accent-insensitive searching -->
+                                            <select class="selectpicker show-tick" name="countryCode" id="countryCode" data-live-search="true" data-live-search-normalize="true" data-size="6">  
                                         <option value="" selected>Nessuno ...</option>
                                         <% countries.forEach(country => { %>
                                             <% if (userToUpdate.countryCode == country.alpha_2) { %>
@@ -87,51 +146,41 @@
                                                 <% } %>
                                         <% }) %>
                                     </select>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
 
 
 
-                        <%- include('../partials/form/imageUpload') %>
+                                <%- include('../partials/form/imageUpload') %>
 
 
 
 
-                            <% if (userToUpdate.img && userToUpdate.img !== '') { %>
+                                    <% if (userToUpdate.img && userToUpdate.img !== '') { %>
 
-                                <div class="col-12 d-flex justify-content-center align-items-end">
+                                        <div class="col-12 d-flex justify-content-center align-items-end">
 
-                                    <img id="oldImg" src="<%= userToUpdate.img %>" style="width: 60%; max-width: 550px;" id="oldImg">
+                                            <img id="oldImg" src="<%= userToUpdate.img %>" style="width: 60%; max-width: 550px;" id="oldImg">
 
 
-                                    <button type="button" style="background-color: transparent; border: none;" id="trashOldImg" onclick="deleteSavedImage(['oldImg', 'trashOldImg', 'iconOldImg'])">
+                                            <button type="button" style="background-color: transparent; border: none;" id="trashOldImg" onclick="deleteSavedImage(['oldImg', 'trashOldImg', 'iconOldImg'])">
                                         <i class="fas fa-trash text-primary fa-2x mb-3 ml-2" id="iconOldImg"></i>
                                     </button>
-                                </div>
+                                        </div>
 
 
-                                <% } %>
+                                        <% } %>
 
-                                    <input type="text" name="deleteImage" id="deleteImage" value="0" hidden>
-                                    <input type="text" name="oldImgUrl" value="<%= userToUpdate.img %>" hidden>
-
-
-
+                                            <input type="text" name="deleteImage" id="deleteImage" value="0" hidden>
+                                            <input type="text" name="oldImgUrl" value="<%= userToUpdate.img %>" hidden>
 
 
 
+                                            <%- include('../partials/form/userRoles') %>
 
 
-
-
-
-                                    <%- include('../partials/form/userRoles') %>
-
-
-
-
-                                        <%- include('../partials/form/required') %>
+                                                <%- include('../partials/form/required') %>
 
 
                 </div>
@@ -159,6 +208,9 @@
 
     </div>
 
-    <script src="/js/admin/crudPeople.js"></script>
+    <!-- <script src="/js/admin/crudPeople.js"></script> -->
+    <script src="/js/password.js"></script>
+    <script src="/js/dateOfBirth.js"></script>
+    <script src="/js/admin/utilsS3.js"></script>
 
     <%- include('./../partials/footer') %>
