--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col-md-7 col-lg-6">
-            <form action="/register" method="POST" id="form">
+            <form action="/register" method="POST" id="uploadForm">
 
 
                 <!-- metto un benvenuto con NODEMAILER -->
