fixed some bugs

--- a/views/admin/partials/form/required.ejs
+++ b/views/admin/partials/form/required.ejs
@@ -1,3 +1,3 @@
 <div class="form-group mt-5 mb-0">
-    <span class="text-danger">*</span> È obbligatorio!
+    <%- include('./requiredSymbol') %> È obbligatorio!
 </div>
