--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -20,7 +20,7 @@
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <label class="input-group-text" for="quotedById">Citatato da ...&nbsp;<span class="text-danger">*</span></label>
+                                <label class="input-group-text" for="quotedById">Citatato da ...&nbsp;<%- include('../partials/form/requiredSymbol') %></label>
                             </div>
                             <select class="custom-select" name="quotedById" id="quotedById">
                                 <option value="" selected>Nessuno ...</option>
