--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,22 +43,22 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
                         <div class="border-bottom w-100 ml-5"></div>
                         <span class="px-2 small font-weight-bold">OR</span>
                         <div class="border-bottom w-100 mr-5"></div>
                     </div>
                 </div>
-
-                <div class="row">
+ -->
+                <!-- <div class="row">
                     <div class="form-group col-lg-12 mx-auto">
                         <a href="#google" class="btn btn-primary btn-block py-2 btn-google">
                             <i class="fab fa-google mr-2"></i>
                             <span class="font-weight-bold">Accedi con Google</span>
                         </a>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="text-center w-100">
                     <p class="font-weight-bold">Ti serve un account? <a href="/register" class="ml-1 text-info">Registrazione</a></p>
