--- a/views/admin/people/update.ejs
+++ b/views/admin/people/update.ejs
@@ -20,14 +20,14 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="name">Nome <span class="text-danger">*</span></label>
+                                    <label for="name">Nome <%- include('../partials/form/requiredSymbol') %></label>
                                     <input type="text" name="name" id="name" class="form-control" value="<%= person.name %>">
                                 </div>
 
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="surname">Cognome <span class="text-danger">*</span></label>
+                                    <label for="surname">Cognome <%- include('../partials/form/requiredSymbol') %></label>
                                     <input type="text" name="surname" id="surname" class="form-control" value="<%= person.surname %>">
                                 </div>
                             </div>
