--- a/views/admin/users/createModify.ejs
+++ b/views/admin/users/createModify.ejs
@@ -174,14 +174,14 @@
                 <div class="card-footer">
                     <div class="col-12 d-flex justify-content-between align-items-center">
                         <div id="input-group ">
-                            <button type="submit " class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma creazione</button>
+                            <button type="submit " class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma</button>
                             <a href="/admin/admins" class="btn btn-dark mb-2">
                                 <i class="fas fa-history "></i> | Annulla</button>
                             </a>
                         </div>
                         </form>
                         <% if (userToUpdate.email) { %>
-                            <form action="/admin/users/delete/<%= userToUpdate.id %>?_method=DELETE" method="POST">
+                            <form action="/admin/users/delete/<%= userToUpdate.id %>/<%= userToUpdate.role %>?_method=DELETE" method="POST">
                                 <button type="submit" class="btn btn-danger mb-2"><i class="fas fa-trash text-primary"></i> | Cancella</button>
                             </form>
                             <% } %>
