--- a/views/register.ejs
+++ b/views/register.ejs
@@ -93,22 +93,22 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
                             <div class="border-bottom w-100 ml-5"></div>
                             <span class="px-2 small font-weight-bold">OR</span>
                             <div class="border-bottom w-100 mr-5"></div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="form-group col-lg-12 mx-auto">
-                            <a href="#google" class="btn btn-primary btn-block py-2 btn-google">
+                            <a href="#" class="btn btn-primary btn-block py-2 btn-google">
                                 <i class="fab fa-google mr-2"></i>
                                 <span class="font-weight-bold">Accedi con Google</span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="text-center w-100" style="z-index: 99;">
                         <p class="font-weight-bold mb-10">Hai già un account? <a href="/login" class="ml-1 text-info">Login</a></p>
