--- a/views/public/partials/posts/cards.ejs
+++ b/views/public/partials/posts/cards.ejs
@@ -1,6 +1,6 @@
 <% posts.forEach(post => { %>
 
-    <div class="col-md-4 mb-4">
+    <div class="col-lg-4 col-md-6 mb-4">
 
         <div class="card cardHome bg-transparent border-primary">
             <div class="card-header border-primary">
