--- a/views/public/profile.ejs
+++ b/views/public/profile.ejs
@@ -45,7 +45,7 @@
 
                         <div class="row">
                             <div class="col-12 mb-2">
-                                Vuoi cambiare la <span class="font-italic font">password</span>?
+                                Vuoi cambiare la <span class="font-italic text-primary">password</span>?
                             </div>
                         </div>
 
@@ -205,7 +205,8 @@
 
     <script src="/js/password.js"></script>
     <script src="/js/dateOfBirth.js"></script>
-    <script src="/js/admin/crudPeople.js"></script>
+    <script src="/js/admin/utilsS3.js"></script>
+    <!-- <script src="/js/admin/crudPeople.js"></script> -->
 
 
 
