--- a/views/register.ejs
+++ b/views/register.ejs
@@ -93,13 +93,13 @@
                         </div>
                     </div>
 
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
                             <div class="border-bottom w-100 ml-5"></div>
                             <span class="px-2 small font-weight-bold">OR</span>
                             <div class="border-bottom w-100 mr-5"></div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <!-- <div class="row">
                         <div class="form-group col-lg-12 mx-auto">
