changed limit S3 to 10MB

--- a/views/admin/people/all.ejs
+++ b/views/admin/people/all.ejs
@@ -1,9 +1,20 @@
 <%- include('./../partials/header') %>
 
     <div class="container-fluid">
+
         <div class="row">
+            <div class="col-12 text-center">
+                <%- include('../../partials/flashMessages') %>
+            </div>
+        </div>
+
+
+        <div class="row">
+
             <div class="col-12 mb-4">
+
                 <div class="card border-right-primary shadow h-100 py-2">
+
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                         <h6 class="m-0 font-weight-bold">Tabella PERSONE</h6>
 
@@ -39,6 +50,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
@@ -123,9 +135,12 @@
                             </table>
                         </div>
                     </div>
+
                 </div>
+
             </div>
         </div>
+
     </div>
 
     <script src="/js/admin/allPeople.js"></script>
