--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -3,6 +3,13 @@
     <div class="container-fluid">
 
         <div class="row">
+            <div class="col-12 text-center">
+                <%- include('../../partials/flashMessages') %>
+            </div>
+        </div>
+
+
+        <div class="row">
 
 
             <div class="col-12 mb-4">
