--- a/views/admin/posts/all.ejs
+++ b/views/admin/posts/all.ejs
@@ -9,6 +9,12 @@
         <div class="container-fluid">
 
             <div class="row">
+                <div class="col-12 text-center">
+                    <%- include('../../partials/flashMessages') %>
+                </div>
+            </div>
+
+            <div class="row">
 
 
                 <div class="col-12 mb-4">
