--- a/views/admin/users/createModify.ejs
+++ b/views/admin/users/createModify.ejs
@@ -9,9 +9,12 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <% if (!userToUpdate.email) { %>
                         <h6 class="m-0 font-weight-bold">Crea UTENTE</h6>
+                        <span id="status"></span>
                         <% } else { %>
                             <h6 class="m-0 font-weight-bold">Modifica UTENTE</h6>
+                            <span id="status"></span>
                             <% } %>
+
                 </div>
 
                 <div class="card-body">
@@ -23,7 +26,7 @@
                     </div>
 
 
-                    <form action="/admin/users/<%= formAction %>" method="POST" enctype="multipart/form-data">
+                    <form action="/admin/users/<%= formAction %>" method="POST" enctype="multipart/form-data" id="uploadForm">
 
                         <div class="row">
 
