--- a/views/public/profile.ejs
+++ b/views/public/profile.ejs
@@ -9,6 +9,7 @@
 
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold">Aggiorna profilo</h6>
+                    <span id="status"></span>
                 </div>
 
                 <div class="card-body">
